[fix #6] add spacing between paragraphs

--- a/src/css/org.css
+++ b/src/css/org.css
@@ -34,7 +34,7 @@ body {
 }
 
 p {
-    margin: 0 auto;
+    margin: 1em auto;
 }
 
 ol,ul {
